--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,5 @@
     <string name="pria">Laki-Laki</string>
     <string name="wanita">Perempuan</string>
     <string name="unmerrige">Belum Menikah</string>
-    <string name="menikah">Menikah</string>
+    <string name="merrige">Menikah</string>
 </resources>
